--- a/Round4/Manuscript/Permuting_Accuracy.bib
+++ b/Round4/Manuscript/Permuting_Accuracy.bib
@@ -1950,3 +1950,14 @@ Contact: tongt@hkbu.edu.hk},
 	year={2018},
 	publisher={Institute of Mathematical Statistics}
 }
+
+@article{zheng2018extrapolating,
+	title={Extrapolating expected accuracies for large multi-class problems},
+	author={Zheng, Charles and Achanta, Rakesh and Benjamini, Yuval},
+	journal={The Journal of Machine Learning Research},
+	volume={19},
+	number={1},
+	pages={2609--2638},
+	year={2018},
+	publisher={JMLR. org}
+}
