--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -47,13 +47,14 @@
 We have focused on the him-dim--small-sample setup because it is appropriate for many problems in neuroimaging and genetics. 
 To show that our conclusions are not due to the \emph{small-sample}, but rather, to the \emph{high-dim}, we scale our basic setup ten-fold. 
 Fixing $p/n$, we simulate with $p=230$ and $n=400$. 
-The results, reported in Figure~\ref{fig:large-sample}, are qualitatively similar to the high-dim--small-sample in the main text. 
+The results, reported in Figure~\ref{fig:large-sample}, are qualitatively similar to the high-dim--small-sample in the main text.
 In particular with respect to the dominance of two-group tests. 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.45\columnwidth]{"art/file1"}
 	\caption{[TODO: replace oracle.cov caption]
-		\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.}
+		\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.
+	$\SNR$ was set to $0$ (red circle), $100$ (green triangle), $400$ (blue square) for comparable power to other simulations.}
 	\label{fig:large-sample}
 \end{figure}
 
