--- a/Round4/file1.Rmd
+++ b/Round4/file1.Rmd
@@ -10,7 +10,7 @@ editor_options:
 
 ```{r}
 n.permutations <- 3e2
-n.replications <-  5e2
+n.replications <-  1e2
 ```
 
 
@@ -25,7 +25,8 @@ n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
 
-effects <- seq(0, 20, length=3) # change in location
+# effects <- seq(0, 10, length=3) this signal is too weak
+effects <- seq(0, 20, length=3) # 
 
 Sigma <- diag(p)
 Sigma.inv <- solve(Sigma)
@@ -56,12 +57,13 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
-    noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
+
     
     ## Shift alternative:
     # effect <- effects[[1]]
     
     shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
+    noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
     noise[labels,] <- noise[labels,] + shift
     
     ## Compute observed statistic
@@ -69,7 +71,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     x2 <- noise[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
-    fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    fold.ids <- balanced_folding(labels, n.folds, TRUE)
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
@@ -91,7 +93,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       # i <- 1
       
       labels <- sample(labels) # label switching
-      fold.ids <- balanced_folding(labels, n.folds, balance) # refold
+      fold.ids <- balanced_folding(labels, n.folds, TRUE) # refold
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
@@ -121,7 +123,7 @@ pbPost(type = "note", body = "File2", title = the.message)
 
 
 ```{r}
-# load('file2.RData')
+# load('file1.RData')
 source('prepare_graphics.R')
 plot(plot.3)
 ```
