--- a/Round4/TODO
+++ b/Round4/TODO
@@ -1,7 +1,4 @@
-- Figure out effects. Is file 1 the only exception? 
-   - file2 works with 0,5,10 (verify)
-   - file1 works with 0,10,20 (verify)
-   - file20, and other AR, work with (0,5,10)
+- Move .Rmd files in main manuscript to ZIP.
    
 
     
