--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -341,7 +341,7 @@ We now compare the power of our various statistics in various configurations.
 We do so via simulation.
 The basic simulation setup is presented in Section~\ref{sec:simulation_details}.
 Following sections present variations on the basic setup.
-The \R code for the simulations can be found in [TODO: update github repo] \url{http://www.john-ros.com/permuting_accuracy/}.
+The \R code for the simulations can be found in \url{http://www.john-ros.com/permuting_accuracy/}.
 
 
 \subsection{Basic Simulation Setup-- Fisher's LDA}
@@ -399,7 +399,7 @@ This is most notable for the intermediate signal strength (green triangles).
 	\centering
 	\includegraphics[width=0.5\columnwidth]{"art/file2"}
 	\caption{
-		[TODO: update with Oracle caption.]
+		[TODO: verify anti-conservatism.]
 		The power of the permutation test with various test statistics. 
 		The power on the x-axis. 
 		Effects are color and shape coded. 
@@ -524,8 +524,7 @@ In the Supplementary Material we provide an example of the former by simulating 
 		Some tests that are possible in $x$ but not in $\tilde{x}$ are omited.}
 		\label{fig:interactions-in-augmented-space}
 	\end{subfigure}
-	\caption{[TODO: replace oracle caption]
-		\textbf{Logistic regression with second order interactions.} 
+	\caption{\textbf{Logistic regression with second order interactions.} 
 		Data generated via $y|x \sim Binom(1,p(x));
 		p(x)=\exp(\eta)/[1+\exp(\eta)];
 		\eta=x'\beta+x'Bx$ where 
@@ -593,8 +592,7 @@ It can also be seen that power increases with the number of bootstrap replicatio
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\columnwidth]{"art/file13"}
-	\caption{[TODO: replace oracle.cov caption]
-		\textbf{Bootstrap.}
+	\caption{\textbf{Bootstrap.}
 		The power of a permutation test with various test statistics. 
 		The power on the x-axis. 
 		Effects are color and shape coded. 
@@ -664,7 +662,7 @@ The better power of \emph{svm.CV.c001} leads us to argue that the optimal regula
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\columnwidth]{"art/file14"}
-	\caption{
+	\caption{[TODO: re-run to update Oracle caption]
 		\textbf{HighDim Classifier.} 
 		The power of a permutation test with various test statistics. 
 		The power on the x-axis. 
