--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -52,7 +52,7 @@ In particular with respect to the dominance of two-group tests.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.45\columnwidth]{"art/file1"}
-	\caption{[TODO: replace oracle.cov caption]
+	\caption{[TODO: re-run and save.image to update caption]
 		\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.
 	$\SNR$ was set to $0$ (red circle), $100$ (green triangle), $400$ (blue square) for comparable power to other simulations.}
 	\label{fig:large-sample}
@@ -186,8 +186,7 @@ Why the GOF tests perform so much better in the augmented space may be the topic
 		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
 		\label{fig:interactions-in-augmented-space}
 	\end{subfigure}
-	\caption{[TODO: replace oracle.cov caption]
-		\textbf{Logistic regression. Main effects and interactions.} 
+	\caption{\textbf{Logistic regression. Main effects and interactions.} 
 		Data generated via $y|x \sim Binom(1,p(x));
 		p(x)=\exp(\eta)/[1+\exp(\eta)];
 		\eta=\beta_0 + x'\beta + x'Bx$ where 
