--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -12,7 +12,7 @@
 \begin{document}
 
 % Title of paper
-\title{Better-Than-Chance Classification for Signal Detection-- Supplementary}
+\title{Better-Than-Chance Classification for Signal Detection-- Supplementary Material}
 
 \author{Jonathan D. Rosenblatt$^\ast$ \\ 
 	\textit{Department of IE\&M and Zlotowsky Center for Neuroscience, 
