--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -528,7 +528,6 @@ In the Supplementary Material we provide an example of the former by simulating 
 		p(x)=\exp(\eta)/[1+\exp(\eta)];
 		\eta=x'\beta+x'Bx$ where 
 		$\beta$ is a scaled vector of ones, and $B$ a scaled identity matrix.
-		Scaling is selected to (roughly) keep the SNR of the basic setup. 
 		Finally, $x\sim \mathcal{N}(0,I_{p\times p})$.
 	 } 
 	\label{fig:logistic-main-and-interactions}
@@ -730,8 +729,8 @@ We emphasize that both test statistics were compared with the same permutation s
 \label{sec:discussion}
 
 We have set out to understand which of the tests is more powerful: accuracy-tests or two-group tests. 
-Our current observation is that we have never found accuracy tests to be optimal in high-dim regimes; there was always a two-group test that dominated in power.
-We conjecture that accuracy are never optimal, simply because of the needless discretization built in the test statistic.
+Our current observation is that we have never found accuracy tests to be preferable in high-dim regimes; there was always a two-group test that dominated in power.
+We conjecture that accuracy are never preferred because of the needless discretization built in the test statistic.
 We also conjecture the advantage of two-group tests will increase when scaling from two-class to multi-class classification.
 Two-group tests are typically easier to implement, and faster to run, since no resampling is required. 
 Statistics such as \emph{Schafer}, \emph{Goeman}, \emph{Srivastava}, \emph{dCOV}, and \emph{Gretton}, are particularly well suited for detecting multivariate signal in high-dim.
@@ -742,7 +741,7 @@ Statistics such as \emph{Schafer}, \emph{Goeman}, \emph{Srivastava}, \emph{dCOV}
 The low power of the accuracy-tests compared to two-group tests can be attributed to some of the following causes.
 
 \subsubsection{Data Splitting}
-Cross-validated statistics split the data.
+Cross-validation splits the data.
 The train set serves to learn a statistic, and the test set to compute it.
 In a train-test validation scheme, the effective sample size is that of the test set.
 This is clearly inefficient. 
@@ -772,17 +771,16 @@ Firstly, because a Monte-Carlo sample of permutations will always be conservativ
 Secondly, because of the presence of ties, which does not allow to exhaust the permissible false positive rate, unless randomization is introduced.
 Thirdly, because a highly discrete test statistic is insensitive to mild perturbations of the data.
 For an intuition consider the usage of the \emph{resubstitution accuracy}, i.e. the train-accuracy, as a test statistic. 
-In a very high-dimensional regime, the resubstitution accuracy may be as high as $1$ for the observed data \cite[Theorem 1]{mclachlan_bias_1976}, but also for any permutation.
+In a very high-dimensional regime, overfitting may cause the resubstitution accuracy to be as high as $1$ for the observed data \cite[Theorem 1]{mclachlan_bias_1976}, but also for any permutation.
 The concentration of resubstitution accuracy near $1$, and its discretization, render this test completely useless, with power tending to $0$ for any (fixed) effect size, as the dimension of the model grows. 
 This explains the terrible power of \emph{svm.noCV.c100}, which has barely any regularization (recall that the cost parameter in LIBSVM is inversely proportional to the regularization). 
 
 The degree of discretization is governed by the sample size. 
 For this reason, an asymptotic analysis such as \cite{ramdas_classification_2016}, or \cite{golland_permutation_2005}, will not capture power loss due to discretization. 
 An asymptotic analysis, which eschews the discretization effect,  may suggest resubstitution accuracy estimates are good test statistics, while they suffer from very low finite-sample power. 
-One of the effects of discretization is ties. 
-The canonical remedy for ties--- random tie breaking --- showed only a minor improvement as reported in the Supplementary Material.
 
-Using our simulations we may quantify the power loss due to discretization, this is because the resubstitution accuracy of Figher's LDA is equivalent to Hotelling's $T^2$ after binarizing predictions. 
+Using our simulations we may quantify the power loss due to discretization.
+This is because the resubstitution accuracy of Figher's LDA is equivalent to Hotelling's $T^2$ after binarizing predictions. 
 From Figure~\ref{fig:simulation_1} we see that for the intermediate signals strength, \emph{Hotelling} has roughly twice the power of LDA (\emph{lda.noCV.1}).
 We thus conclude that the effect of discretization may be considerable. 
 
@@ -803,9 +801,9 @@ The matter of discretization was addressed in a $2011$ post by Prof. Frank Harre
 For a fair comparison between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
 We would have like to fix the power of the oracle test, but for some simulation setups that is possible only via a lengthy numerical search. 
 We thus decided to fix $\SNR$, as a proxy.
-In the shifted Gaussian case, $\SNR$ is equivalent to fixing the Kullback–Leibler Divergence between sample means $KL[\bar x_1,\bar x_0]$, which seems a good index of a problem's difficulty: it governs power, and is easy to compute. 
+In the shifted Gaussian case, $\SNR$ is equivalent to fixing the Kullback–Leibler Divergence between sample means, $KL[\bar x_1,\bar x_0]$, which seems a good index of a problem's difficulty: it governs power, and is easy to compute. 
 Exceptions to this rule are those where $\mu$ does not index signal, such as logistic regression, and the mixture class in the Supplementary Material. 
-Another exception is the large-sample setup where we had to vary $\SNR$ to make power comparable. 
+Another exception is the large-sample setup where fixing $\SNR$ was not enough to make power comparable. 
 We attribute this to the fact that power depends on $n$ and $p$, not only via $\SNR$.
 
 Fixing $\SNR$ implies that the Euclidean norm of $\mu=\mathbb{E}(x_1)-\mathbb{E}(x_0)$ varies with $\Sigma$, with the sample size $n$, the dimension $p$, and with the direction of the signal.
@@ -824,8 +822,8 @@ Why is that?
 We attribute this phenomenon to regularization.
 Whereas the signal, $\mu$, varies in direction, the regularization of $\hat \Sigma$ does not. 
 We already know from ridge regression that a Tikhonov regularization of the covariance shrinks estimates. 
-We also know that shrinking is more aggressive in the the low PCs of the design \citep{hastie_elements_2003}. 
-If groups differ in the same direction where shrinking is most aggressive, then this regularization may mask the signal. 
+We also know that shrinking is more aggressive in the low PCs of the design \citep{hastie_elements_2003}. 
+If group means differ in the direction where shrinking is most aggressive, then regularization may mask the signal. 
 This explains the fact that unregularized tests have more power than the regularized, as seen in Figures~\ref{fig:dependence_12} and Supplementary Material.
 
 
