--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -125,7 +125,7 @@ In particular: two-group tests dominate accuracy tests, and signal in the low PC
 \section{Departure From Shift Alternatives}
 
 Shift alternatives are the most common signal model in the univariate statistical literature. 
-They are also very common in the multivariate literature, as they are implied by Fisher's LDA problem setup, and in multivariate analysis of variance (MANOVA).
+They are also very common in the multivariate literature, as they are implied by Fisher's LDA problem setup, known as \emph{Gaussian Bayes} in the machine learning literature.
 On the other hand, effects may manifest themselves in many ways, not necessarily in location. 
 We now verify our claims in models which are not ``pure shifts''. 
 These include logistic regression, and a mixture class. 
@@ -382,7 +382,8 @@ It demonstrates that the power disadvantage of accuracy-tests cannot be remedied
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\columnwidth]{art/file33}
-	\caption{\textbf{Tie breaking}: The basic simulation setup with random tie breaking.}
+	\caption{[TODO: why first statistic missing?]
+		\textbf{Tie breaking}: The basic simulation setup with random tie breaking.}
 	\label{fig:file33}
 \end{figure}
 
