--- a/Round4/Manuscript/Permuting_Accuracy.bib
+++ b/Round4/Manuscript/Permuting_Accuracy.bib
@@ -1961,3 +1961,96 @@ Contact: tongt@hkbu.edu.hk},
 	year={2018},
 	publisher={JMLR. org}
 }
+
+
+
+  @Manual{mvtnorm,
+	title = {{mvtnorm}: Multivariate Normal and t Distributions},
+	author = {Alan Genz and Frank Bretz and Tetsuhisa Miwa and Xuefei Mi and Friedrich Leisch and Fabian Scheipl and Torsten Hothorn},
+	year = {2018},
+	note = {R package version 1.0-8},
+	url = {https://CRAN.R-project.org/package=mvtnorm},
+}
+
+  @Manual{foreach,
+	title = {foreach: Provides Foreach Looping Construct for R},
+	author = {Steve Weston and Microsoft},
+	year = {2017},
+	note = {R package version 1.4.4},
+	url = {https://CRAN.R-project.org/package=foreach},
+}
+
+  @Manual{Hotelling,
+	title = {Hotelling: Hotelling's T2 Test and Variants},
+	author = {James Curran},
+	year = {2018},
+	note = {R package version 1.0-5},
+	url = {https://CRAN.R-project.org/package=Hotelling},
+}
+
+  @Manual{rpushbullet,
+	title = {RPushbullet: R Interface to the Pushbullet Messaging Service},
+	author = {Dirk Eddelbuettel and Bill Evans and Mike Birdgeneau and Henrik Bengtsson and Seth Wenchel},
+	year = {2017},
+	note = {R package version 0.3.1},
+	url = {https://CRAN.R-project.org/package=RPushbullet},
+}
+
+
+@Manual{sparsediscrim,
+	title = {Sparse and Regularized Discriminant Analysis},
+	author = {John Ramey},
+	year = {2017},
+	note = {R package version 0.2.5},
+	url = {https://github.com/ramhiser/sparsediscrim},
+}
+
+
+@Article{glmnet,
+	title = {Regularization Paths for Generalized Linear Models via Coordinate Descent},
+	author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
+	journal = {Journal of Statistical Software},
+	year = {2010},
+	volume = {33},
+	number = {1},
+	pages = {1--22},
+	url = {http://www.jstatsoft.org/v33/i01/},
+}
+
+
+@Manual{globaltest,
+	title = {Globaltest: testing association of a group of genes
+	with a clinical variable},
+	author = {J. J. Goeman and J. Oosting},
+	year = {2018},
+	note = {R package version 5.36.0},
+}
+
+
+@Article{kernlab,
+	title = {kernlab -- An {S4} Package for Kernel Methods in {R}},
+	author = {Alexandros Karatzoglou and Alex Smola and Kurt Hornik and Achim Zeileis},
+	journal = {Journal of Statistical Software},
+	year = {2004},
+	volume = {11},
+	number = {9},
+	pages = {1--20},
+	url = {http://www.jstatsoft.org/v11/i09/},
+}
+
+@Manual{energy,
+	title = {energy: E-Statistics: Multivariate Inference via the Energy of Data},
+	author = {Maria Rizzo and Gabor Szekely},
+	year = {2018},
+	note = {R package version 1.7-5},
+	url = {https://CRAN.R-project.org/package=energy},
+}
+
+@Manual{hdtest,
+	title = {HDtest: High Dimensional Hypothesis Testing for Mean Vectors, Covariance
+	Matrices, and White Noise of Vector Time Series},
+	author = {Meng Cao and Tong He and Wen Zhou},
+	year = {2018},
+	note = {R package version 2.1},
+	url = {https://CRAN.R-project.org/package=HDtest},
+}
