--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -660,8 +660,7 @@ The better power of \emph{svm.CV.c001} leads us to argue that the optimal regula
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\columnwidth]{"art/file14"}
-	\caption{[TODO: re-run to update Oracle caption]
-		\textbf{HighDim Classifier.} 
+	\caption{\textbf{HighDim Classifier.} 
 		The power of a permutation test with various test statistics. 
 		The power on the x-axis. 
 		Effects are color and shape coded. 
@@ -907,6 +906,9 @@ JDR wishes to thank, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir, Joshua Vo
 JDR is supported by the Israeli Science Foundation grants 900/16 and 924/16. 
 YB is supported by NIH grant R01GM083084.
 
+Many \R packages were used in this project. 
+We thank the following:
+\cite{mvtnorm,foreach,Hotelling,rpushbullet,sparsediscrim,glmnet,globaltest,kernlab,energy,hdtest}	
 
 \newpage
 \bibliographystyle{abbrvnat}
